Various table usability enhancements and fixes * Fix rendering issue on Data page * Prevent zoom button tooltip text from wrapping * Incorporate prevStatus with fallback * Remove 10K page length, generate tooltips asynchronously * Check for stale allSites data when switching pages, reload at most hourly

--- a/src/main/primary_entry/css/global/NavBar.css
+++ b/src/main/primary_entry/css/global/NavBar.css
@@ -36,6 +36,14 @@
     line-height: 28px;
 }
 
+.wait {
+    display: none;
+}
+.wait.show {
+    display: inline !important;
+    margin: auto 4px;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 Collapse navbar earlier than bootstrap's default 768px
  - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
